--- a/Femulator/MapEditor/src/com/angryelectron/femulator/mapeditor/EditorTopComponent.form
+++ b/Femulator/MapEditor/src/com/angryelectron/femulator/mapeditor/EditorTopComponent.form
@@ -232,6 +232,9 @@
               <ResourceString bundle="com/angryelectron/femulator/mapeditor/Bundle.properties" key="EditorTopComponent.learnButton.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="learnButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="saveButton">
           <Properties>
